sdk: Issue #2 - Added media access calls
Updated WpFSample to use new media API to retrieve images

--- a/sdk/dotnet/samples/WpfSample/MainWindow.xaml
+++ b/sdk/dotnet/samples/WpfSample/MainWindow.xaml
@@ -214,7 +214,7 @@
 
                     <!-- Display the selected image -->
                     <Image Grid.Row="1"
-                           Source="{Binding SelectedImage.ImageUrl}"/>
+                           Source="{Binding SelectedImageBitmap}"/>
                 </Grid>
             </Grid>
         </GroupBox>
